[package]
name = "transaction-record"
version = "0.1.0"
edition = "2021"
publish = ["afo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv-async = { version = "1.2.0", features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.9"
tokio-util = "0.6.9"
futures = "0.3.15"
csv = "1.1.6"
